# PyModPDE

./: LICENSE  README.md  examples.ipynb  generate-doc.sh  requirements.txt  setup.cfg
binder/: postBuild  requirements.txt
doc/: MOIRA.html  pymodpde.html
numerical/: integrators.py  layout.py  rhsfuns.py
pymodpde/: __init__.py  pymodpde.py
src/: MOIRA.py  pymodpde.py
web-app/: pymodpde.html
