[metadata]
name = pymodpde
version = 1.0.0
description = Educational package for modified equation analysis
url = https://github.com/saadgroup/PyModPDE
author = Mokbel Karam
author_email = mokbel.karam@chemeng.utah.edu
license = MIT
long_description =
platforms = Linux, Mac OS X, Windows
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib>=2.0.2
    numpy>=1.14.2
    scipy>=1.0.0
    ipywidgets>=7.5.1
    ipython>=7.16.3
    sympy>=1.5
    jupyter_contrib_nbextensions>=0.2.8