[metadata]
name = pymodpde
version = 1.0.0
description = Educational package for modified equation analysis
url = https://github.com/saadgroup/PyModPDE
author = Mokbel Karam
author_email = mokbel.karam@chemeng.utah.edu
license = MIT
long_description =
platforms = Linux, Mac OS X, Windows
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires =
    ipython>=8.3.0
    ipywidgets>=7.7.0
    matplotlib>=3.5.2
    numpy>=1.22.4
    scipy>=1.8.1
    setuptools>=61.2.0
    sympy>=1.10.1
    jupyter_contrib_nbextensions>=0.2.8